--- a/gb/20/8/16/n12334610.md
+++ b/gb/20/8/16/n12334610.md
@@ -1,74 +1,68 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>嘉市祖父母节庆祝大会暨乐龄中心成果展</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/455103-600x400.jpg" />
 <h6>推展家庭教育绩优个人奖三组，与副市长陈淑慧（右6）、教育处副处长林喜信（左3）等人合照。（李撷璎／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年08月16日讯】（大纪元记者李撷璎台湾嘉义报导）许多阿公阿嬷带着孙子参加<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%96%E7%88%B6%E6%AF%8D%E8%8A%82.md#1">祖父母节</a>活动，今年嘉义市祖父母节Grandparents Day庆祝活动于16日上午在崇文国小游艺馆二楼办理“温馨祖孙情 幸福向前行”，鼓励祖孙经由互动的世代间学习，增进情感凝聚，进而落实共同建立家庭世代温馨情谊。</p>
+<p>【大纪元2020年08月16日讯】（大纪元记者李撷璎台湾嘉义报导）许多阿公阿嬷带着孙子参加<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%96%E7%88%B6%E6%AF%8D%E8%8A%82.md#1">祖父母节</a>活动，今年嘉义市祖父母节Grandparents Day庆祝活动于16日上午在崇文国小游艺馆二楼办理“温馨祖孙情 幸福向前行”，鼓励祖孙经由互动的世代间学习，增进情感凝聚，进而落实共同建立家庭世代温馨情谊。</p>
 <p>嘉义市副市长陈淑慧代表市长黄敏惠参与活动，除了表扬109年度推动家庭教育绩优团体及个人奖外，并且与祖孙家庭一起参与Kahoot竞赛活动、欣赏东西区乐龄学习中心舞蹈、小提琴表演，场面欢乐、有趣。</p>
-<figure id="attachment_12334821" aria-describedby="caption-attachment-12334821" style="width: 501px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455101.jpg"><img class=" wp-image-12334821" src="https://i.epochtimes.com/assets/uploads/2020/08/455101-600x394.jpg" alt="" width="501" b="329" /></a><figcaption id="caption-attachment-12334821" class="wp-caption-text">与会人员大合照。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334820" aria-describedby="caption-attachment-12334820" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455100.jpg"><img class=" wp-image-12334820" src="https://i.epochtimes.com/assets/uploads/2020/08/455100-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12334820" class="wp-caption-text">嘉义市北园国小小朋友陪着妈妈、祖母来参加<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A5%96%E7%88%B6%E6%AF%8D%E8%8A%82.md#1">祖父母节</a>活动，前右为北园国小校长吴长颖。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334821" style="width: 501px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455101.jpg"><img class=" wp-image-12334821" src="https://i.epochtimes.com/assets/uploads/2020/08/455101-600x394.jpg" alt="" width="501" b="329" /></a><figcaption class="wp-caption-text">与会人员大合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334820" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455100.jpg"><img class=" wp-image-12334820" src="https://i.epochtimes.com/assets/uploads/2020/08/455100-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">嘉义市北园国小小朋友陪着妈妈、祖母来参加<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A5%96%E7%88%B6%E6%AF%8D%E8%8A%82.md#1">祖父母节</a>活动，前右为北园国小校长吴长颖。（李撷璎／大纪元）</figcaption></figure>
 <p>陈淑慧表示，随着社经环境高龄化、少子女化及婚姻关系等变迁因素，传统家庭结构样貌渐渐受到冲击与改变，嘉义市目前65岁以上的高龄人口比例已超过14%，面对进入高龄社会的挑战，更加凸显了老人健康与社会照顾的重要性，祖父母是联系家庭与稳定世代关系的重要力量。然而，在现代高龄、少子女的社会结构中，祖孙世代的关系却日渐疏离，希望透过推动订定“祖父母节”，来倡导并鼓励祖孙互动。</p>
 <p>陈淑慧说，特别感谢乐龄学习中心在“健康防老”与“活跃老化”议题不断努力耕耘，积极推动生活安全、运动保健、心灵成长、人际关系及贡献服务等，获得教育部乐龄教育奉献奖等诸多奖项的肯定。</p>
-<figure id="attachment_12334802" aria-describedby="caption-attachment-12334802" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455102.jpg"><img class="size-large wp-image-12334802" src="https://i.epochtimes.com/assets/uploads/2020/08/455102-600x337.jpg" alt="" width="600" b="337" /></a><figcaption id="caption-attachment-12334802" class="wp-caption-text">推展家庭教育绩优团体奖三组，志航国小（左4）、吴凤幼儿园（右4）、北园国小（右3）与副市长陈淑慧（中）、教育处副处长林喜信（左2）等人合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334802" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455102.jpg"><img class="size-large wp-image-12334802" src="https://i.epochtimes.com/assets/uploads/2020/08/455102-600x337.jpg" alt="" width="600" b="337" /></a><figcaption class="wp-caption-text">推展家庭教育绩优团体奖三组，志航国小（左4）、吴凤幼儿园（右4）、北园国小（右3）与副市长陈淑慧（中）、教育处副处长林喜信（左2）等人合照。（李撷璎／大纪元）</figcaption></figure>
 <p>教育处表示，这次活动特别安排嘉义市2所乐龄中心结合老中青三代藉由动态表演展现办学成果，东区乐龄部分表演“嘉义好七逃”，呈现嘉义有好山好水，又有美食，人生新旅途，乐龄真幸福。还有西区乐龄学习中心表演“乐在琴中”，小提琴现场演奏两首曲目~望春风与陪我看日出，带动现场轻松、热闹、健康的温馨氛围，另外，也有崇文国小打击团及舞蹈班的精彩演出。</p>
-<figure id="attachment_12334804" aria-describedby="caption-attachment-12334804" style="width: 501px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455104.jpg"><img class=" wp-image-12334804" src="https://i.epochtimes.com/assets/uploads/2020/08/455104-600x400.jpg" alt="" width="501" b="334" /></a><figcaption id="caption-attachment-12334804" class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第一名桃子队代表受奖。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334805" aria-describedby="caption-attachment-12334805" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455105.jpg"><img class=" wp-image-12334805" src="https://i.epochtimes.com/assets/uploads/2020/08/455105-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12334805" class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第二名副市长陈淑慧得奖，奖品转赠给东区乐龄学习中心。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334806" aria-describedby="caption-attachment-12334806" style="width: 501px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455106.jpg"><img class=" wp-image-12334806" src="https://i.epochtimes.com/assets/uploads/2020/08/455106-600x400.jpg" alt="" width="501" b="334" /></a><figcaption id="caption-attachment-12334806" class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第三名教育处副处长林喜信得奖，奖品转赠给西区乐龄学习中心。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334804" style="width: 501px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455104.jpg"><img class=" wp-image-12334804" src="https://i.epochtimes.com/assets/uploads/2020/08/455104-600x400.jpg" alt="" width="501" b="334" /></a><figcaption class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第一名桃子队代表受奖。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334805" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455105.jpg"><img class=" wp-image-12334805" src="https://i.epochtimes.com/assets/uploads/2020/08/455105-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第二名副市长陈淑慧得奖，奖品转赠给东区乐龄学习中心。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334806" style="width: 501px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455106.jpg"><img class=" wp-image-12334806" src="https://i.epochtimes.com/assets/uploads/2020/08/455106-600x400.jpg" alt="" width="501" b="334" /></a><figcaption class="wp-caption-text">嘉义市祖父母节庆祝大会暨乐龄学习中心成果展，以平板连线作Kahoot竞赛活动，第三名教育处副处长林喜信得奖，奖品转赠给西区乐龄学习中心。（李撷璎／大纪元）</figcaption></figure>
 <p>活动的高潮由参加的祖孙家庭一起参与Kahoot竞赛活动，让祖孙共同体验3C科技辅助学习，紧张刺激的祖孙合作抢答竞赛为活动增添不少乐趣。活动中也安排嘉义市颇受市民喜爱的花砖杯垫文创产品制作，祖孙共学同享天伦之乐。最后活动还安排祖孙闯关互动区共有10个关卡，包括古早童玩区、VR及AR科技区、拍照打卡区及“爱的大进击”、“老化体验”以及结合嘉义市环保局协助宣导节电绿能祖孙劲量游戏、卫生局宣导护童反毒大作战等有趣体验关卡，邀请祖孙们一同完成世代间同乐共学活动。</p>
-<figure id="attachment_12334807" aria-describedby="caption-attachment-12334807" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455107.jpg"><img class=" wp-image-12334807" src="https://i.epochtimes.com/assets/uploads/2020/08/455107-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12334807" class="wp-caption-text">Kahoot竞赛活动，第一组小朋友与祖母上前受奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334808" aria-describedby="caption-attachment-12334808" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455108.jpg"><img class=" wp-image-12334808" src="https://i.epochtimes.com/assets/uploads/2020/08/455108-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12334808" class="wp-caption-text">Kahoot竞赛活动，第二组小朋友与祖母抽得积木组合房子一栋的大奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334809" aria-describedby="caption-attachment-12334809" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/455109.jpg"><img class=" wp-image-12334809" src="https://i.epochtimes.com/assets/uploads/2020/08/455109-600x400.jpg" alt="" width="500" b="333" /></a><figcaption id="caption-attachment-12334809" class="wp-caption-text">Kahoot竞赛活动，第三组小朋友与祖父母上前受奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
-<figure id="attachment_12334624" aria-describedby="caption-attachment-12334624" style="width: 501px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/7e50a78d308fe8f39d2a5c6ad96b9ddf.jpg"><img class=" wp-image-12334624" src="https://i.epochtimes.com/assets/uploads/2020/08/7e50a78d308fe8f39d2a5c6ad96b9ddf-600x400.jpg" alt="" width="501" b="334" /></a><figcaption id="caption-attachment-12334624" class="wp-caption-text">游艺馆室外有斗六来的民俗才艺表演团表演画糖，画出的栩栩如生的动物都悬挂在前面供观赏。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334807" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455107.jpg"><img class=" wp-image-12334807" src="https://i.epochtimes.com/assets/uploads/2020/08/455107-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">Kahoot竞赛活动，第一组小朋友与祖母上前受奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334808" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455108.jpg"><img class=" wp-image-12334808" src="https://i.epochtimes.com/assets/uploads/2020/08/455108-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">Kahoot竞赛活动，第二组小朋友与祖母抽得积木组合房子一栋的大奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334809" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/455109.jpg"><img class=" wp-image-12334809" src="https://i.epochtimes.com/assets/uploads/2020/08/455109-600x400.jpg" alt="" width="500" b="333" /></a><figcaption class="wp-caption-text">Kahoot竞赛活动，第三组小朋友与祖父母上前受奖，与副市长陈淑慧合照。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_12334624" style="width: 501px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/7e50a78d308fe8f39d2a5c6ad96b9ddf.jpg"><img class=" wp-image-12334624" src="https://i.epochtimes.com/assets/uploads/2020/08/7e50a78d308fe8f39d2a5c6ad96b9ddf-600x400.jpg" alt="" width="501" b="334" /></a><figcaption class="wp-caption-text">游艺馆室外有斗六来的民俗才艺表演团表演画糖，画出的栩栩如生的动物都悬挂在前面供观赏。（李撷璎／大纪元）</figcaption></figure>
 <p>责任编辑：王愉悦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/15/n11454139.md#1">长辈突然变瘦要警惕？5种现象是衰弱症征兆</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/15/n11454428.md#1">“祖父母节”故事比赛 中市图串连29场活动</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/21/n11467986.md#1">年龄的两极祖孙相偕出门 参与祖父母节活动</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/24/n11475001.md#1">庆祝祖父母节 竹北乐龄学习中心百人同欢乐</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/25/n11476135.md#1">彰县庆祝祖父母节 凸显阿公阿嬷的家庭地位</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/25/n11476680.md#1">阿公阿嬷化身“时尚爷奶”</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/9/1/n11491920.md#1">庆祝祖父母节 黄敏惠与祖孙三代同欢</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616161.md#1">乐龄生活无限好 崙背乡老人会举办成果展</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615323.md#1">111学年度大学学测 国立嘉义高中成绩亮眼</a></li>
-<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614031.md#1">屏东挖眼嫌 裁定续押居民松口气</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/15/n11454139.md#1">长辈突然变瘦要警惕？5种现象是衰弱症征兆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/15/n11454428.md#1">“祖父母节”故事比赛 中市图串连29场活动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/21/n11467986.md#1">年龄的两极祖孙相偕出门  参与祖父母节活动</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/24/n11475001.md#1">庆祝祖父母节 竹北乐龄学习中心百人同欢乐</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/25/n11476135.md#1">彰县庆祝祖父母节  凸显阿公阿嬷的家庭地位</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/8/25/n11476680.md#1">阿公阿嬷化身“时尚爷奶”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/1/n11491920.md#1">庆祝祖父母节  黄敏惠与祖孙三代同欢</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/16/n12334880.md#1">阿公阿嬷快乐 !  云林庆祝祖父母节</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/16/n12334723.md#1">小小药师一日中医药相关知识体验趣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/16/n12334743.md#1">云林举办美声比赛  舒缓移工压力</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/19/n10229517.md#1" target="_blank">中共淫乱的前生今世（3）政治局六淫棍</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546701.md#1" target="_blank">林辉：中共70年来杀了多少人？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
-<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/16/n12334610.htm">嘉市祖父母节庆祝大会暨乐龄中心成果展</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/16/n12334610.htm">嘉市祖父母节庆祝大会暨乐龄中心成果展</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/8/16/n12334610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/8/16/n12334610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
